fixed man/nroff build process and added a descriptive comment of the steps
Tue Feb 11 11:46:52 2003  Alper Ersoy <dirt@gtk.org>

        * docs/generated/Makefile.am: fixed man/nroff build process and added
        a descriptive comment of the steps taken.

        * docs/generated/log2texi.sh: added artificial spaces around @uref
        substitutions.

        * docs/generated/markup.xsl: added <reference-constant> to the
        reference generation templates.

        * TODO: made updates.

        * bse/bseautodoc.c:
        * docs/site-news.texi:
        * docs/site-oldnews.texi:
        * docs/teximacros.texi:
        * docs/generated/log2texi.sh:
        * docs/generated/scandocs.sh: dropped underscores in @reference_* and
        @news_title macros' names for texinfo-4.5 compatibility.

svn path=/trunk/; revision=883

--- a/TODO
+++ b/TODO
@@ -56,13 +56,11 @@ DOCS:
   tsmview. then, gsl-mplan.txt and NEWS don't need anymore markup. [timj]
 - report mising underline to havoc, alper has a tsmview example in
   Re: uref macro, document font Date: Thu, 5 Dec 2002 00:23:38 +0200
-- fix black backgrounds in logo contest thumbnails
-  (occours on entries with alpha channel) [alper]
 - adjust overall brightness of the site [alper]
 - in development docs, make function names in descriptions links to
   apropriate functions [alper]
-- function docs constants (e.g. %NULL) aren't marked up in cyan in .markup output [alper]
 - the beast site is unusable under IE [alper]
+- nroff files need another build step to get final page numbers [alper]
 
 GSL:
 * sample loader currently hard codes 440.0 for osc_freq
