--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+Tue Feb 11 11:46:52 2003  Alper Ersoy <dirt@gtk.org>
+
+ 	* docs/generated/Makefile.am: fixed man/nroff build process and added
+	a descriptive comment of the steps taken.
+ 
+ 	* docs/generated/log2texi.sh: added artificial spaces around @uref
+ 	substitutions.
+ 
+ 	* docs/generated/markup.xsl: added <reference-constant> to the
+ 	reference generation templates.
+
+	* TODO: made updates.
+
+	* bse/bseautodoc.c:
+	* docs/site-news.texi:
+	* docs/site-oldnews.texi:
+	* docs/teximacros.texi:
+	* docs/generated/log2texi.sh:
+	* docs/generated/scandocs.sh: dropped underscores in @reference_* and
+	@news_title macros' names for texinfo-4.5 compatibility.
+
 Tue Feb 11 03:10:19 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/gxk/gxkutils.c (gxk_signal_handler_pending): allow NULL as
