--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 FIXMES:
-- part bound for loops?
+- typed record serialization needs to honour indent for sfi_value_store_param()
+- serialization of homogeneous sequences could store the field type code only once
 - alow snet flagging as aggregate
 - add project_get_wave_snet
 - add developer option
@@ -20,20 +21,14 @@ FIXMES:
 - fix procbrowser
 - fix uses of gsl_engine_tick_stamp_from_systime() in bstwaveeditor.c
 - bst_gmask should use typedef struct _BstGMask BstGMask; instead of gpointer
-- nuke OPEN_FAILED and similar errors in favour of real descriptions
 - MidiEvent (serialization)
-- move simple-source and spawning into sfiutils?
 - fix time stamps
-- storage: fix missing newlines when storing normal proeprties
 - storage: data pocket: use typed serialization instead of #-hack for generic values
 - handle non-validated sequences and records in generation code (things
   can be demarshalled in non-validated form after incompatible changes)
 - cleanup helper/util code in sfitype.h
 - choice type should have validation function
 - match enum names on word boundaries only
-- serialization of homogeneous sequences could store the field type code only once
-- typed record serialization needs to honour indent for sfi_value_store_param()
-- BseStorage as object
 - fix bseutils.c:bse_note_sequence_copy_deep()
 - does BseMidiIController need a MIDI channel property?
 - use procedure storage for undo or nuke the code
@@ -42,13 +37,10 @@ FIXMES:
 - song->master volume doesn't affect anything
 - fix and canonify decibell naming everywhere
 - need volume properties per track
-- piano roll: pasting doesn't quantize (without later movement)
-- initial piano roll popup should shift vscrollbar to around 50%
 - pressing browsing hotkeys in release-notes dialog does stuff
-- preference boundary values can cause assertions
+- check whether preference boundary values still cause assertions
 - sample chunk display should show note names not only midi notes
-- hotkey in piano roll to replay project
-- bstusermessage.c:user_message() signal handler takes choice argument
+- bstusermessage.c:user_message() signal handler takes choice argument fix connections
 - fix engine deinitialization assertions in bseserver.c
 - support [-- Raw --- (big/little) (c=2) (mix=44100) (8/12/16/32) ---] box in wave loader dialog
 - save errno across logging/debugging
@@ -109,6 +101,8 @@ TrackView:
 - context menu with delete, move, insert (double click inserts?)
 
 PianoRoll:
+- hotkey in piano roll to replay project
+- piano roll: pasting doesn't quantize (without later movement)
 - hscrollbar resizable (like cubase) or last-tick + 1 tact
 - ctrl+move should copy (DND style modifier)
 - draw ces and fes with red lines
