--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,13 @@
+Mon Feb 17 18:34:46 2003  Tim Janik  <timj@gtk.org>
+
+	* bseplugin.c (bse_plugin_register_exports): register choice<=>enum
+	transform functions for dynamic enum types.
+
+	* bsestorage.[hc]: keep internal hash table of objects and their unames
+	created during parsing. resolve uname paths via internal hash table if
+	possible to give storage scope objects precedence over existing objects.
+	removed BSE_OBJECT_FLAG_FIXED_UNAME hackery.
+
 Mon Feb 17 15:31:41 2003  Tim Janik  <timj@gtk.org>
 
 	* bseobject.c:  use global ID allocator.
