--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Feb 17 20:57:55 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* acbeast.m4: fixed wrong sed expression.
+
 Mon Feb 17 19:33:19 2003  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c: make the first song page the default notebook
