--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 18 01:09:06 2003  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bsepcmdevice-csl.c: use BSE_PCM_DEVICE_CSL_SUPPORT (which is in the
+	BSE namespace) instead of HAVE_LIBCSL
+
 Mon Feb 17 22:52:02 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* Makefile.am: libcsl support
