--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 18 16:29:17 2003  Tim Janik  <timj@gtk.org>
+
+	* sfilog.c (sfi_log_message): refine debugging messages.
+
 Tue Feb 18 16:29:19 2003  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfivalues.c: make sfi_value_type_transformable actually call
