new file added by Alper Ersoy to extract cross references from existing
Fri Feb 21 19:14:55 2003  Tim Janik  <timj@gtk.org>

        * docs/generated/reference-index.xsl: new file added by
        Alper Ersoy to extract cross references from existing
        xml files.

        * docs/generated/reference-filter.pl: new file added by
        Alper Ersoy to insert fixed cross references into certain
        xml files.

Thu Feb 20 01:03:35 2003  Alper Ersoy  <dirt@gtk.org>

        * bse/bseautodoc.c:
        * docs/teximacros.texi:
        * docs/generated/Makefile.am:
        * docs/generated/scandocs.pl: made function and struct names links to
        their descriptions where possible.

        * docs/generated/html.xsl:
        * docs/generated/man.xsl:
        * docs/generated/markup.xsl: added support for anchors in beast-man://
        urls.

        * docs/generated/man.xsl: fixed a few typos, improved layout in a few
        places, especially in tables.

        * docs/site-news.texi: fixed an overlooked macro name with a dash.

        * docs/generated/css/default.css: removed underlines in navigation
        link hovers in favor of colors. added colors for links.

svn path=/trunk/; revision=918

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Fri Feb 21 19:14:55 2003  Tim Janik  <timj@gtk.org>
+
+	* docs/generated/reference-index.xsl: new file added by
+	Alper Ersoy to extract cross references from existing
+	xml files.
+
+	* docs/generated/reference-filter.pl: new file added by
+	Alper Ersoy to insert fixed cross references into certain
+	xml files.
+
 Thu Feb 20 01:03:35 2003  Alper Ersoy  <dirt@gtk.org>
 
 	* bse/bseautodoc.c:
